@@ -1,6 +1,5 @@
 package fuzs.enchantinginfuser.client.gui.screens.inventory;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 import com.mojang.blaze3d.platform.InputConstants;
@@ -8,11 +7,12 @@ import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.datafixers.util.Pair;
 import fuzs.enchantinginfuser.EnchantingInfuser;
 import fuzs.enchantinginfuser.api.v2.EnchantingInfuserApi;
-import fuzs.enchantinginfuser.network.client.C2SAddEnchantLevelMessage;
-import fuzs.enchantinginfuser.util.EnchantmentUtil;
+import fuzs.enchantinginfuser.client.util.EnchantmentTooltipHelper;
+import fuzs.enchantinginfuser.network.client.ServerboundEnchantmentLevelMessage;
+import fuzs.enchantinginfuser.util.ModEnchantmentHelper;
 import fuzs.enchantinginfuser.world.inventory.InfuserMenu;
 import fuzs.puzzleslib.api.client.gui.v2.components.SpritelessImageButton;
-import fuzs.puzzleslib.api.core.v1.ModLoaderEnvironment;
+import fuzs.puzzleslib.api.client.gui.v2.screen.ScreenHelper;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
@@ -28,7 +28,9 @@ import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
 import net.minecraft.client.gui.screens.inventory.EnchantmentNames;
 import net.minecraft.client.renderer.GameRenderer;
-import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.core.Holder;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.locale.Language;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.FormattedText;
@@ -43,16 +45,16 @@ import net.minecraft.world.item.Items;
 import net.minecraft.world.item.Rarity;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.item.enchantment.ItemEnchantments;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
-@SuppressWarnings("ConstantConditions")
 public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
-    public static final String CURRENT_ENCHANTING_POWER_TRANSLATION_KEY = "gui.enchantinginfuser.tooltip.current_enchanting_power";
-    public static final Component ENCHANTING_POWER_COMPONENT = Component.translatable(ModLoaderEnvironment.INSTANCE.isModLoaded("apotheosis") ? "gui.apotheosis.enchant.eterna" : "gui.enchantinginfuser.tooltip.enchanting_power");
-    private static final ResourceLocation INFUSER_LOCATION = new ResourceLocation(EnchantingInfuser.MOD_ID, "textures/gui/container/enchanting_infuser.png");
+    private static final ResourceLocation INFUSER_LOCATION = EnchantingInfuser.id(
+            "textures/gui/container/enchanting_infuser.png");
     private static final int BUTTONS_OFFSET_X = 7;
     private static final int ENCHANT_BUTTON_OFFSET_Y = 44;
     private static final int ENCHANT_ONLY_BUTTON_OFFSET_Y = 55;
@@ -68,8 +70,8 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
     private Button enchantButton;
     private Button repairButton;
 
-    public InfuserScreen(InfuserMenu pMenu, Inventory pPlayerInventory, Component pTitle) {
-        super(pMenu, pPlayerInventory, pTitle);
+    public InfuserScreen(InfuserMenu infuserMenu, Inventory inventory, Component title) {
+        super(infuserMenu, inventory, title);
         this.imageWidth = 220;
         this.imageHeight = 185;
         this.inventoryLabelX = 30;
@@ -85,7 +87,13 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
     @Override
     protected void init() {
         super.init();
-        this.searchBox = new EditBox(this.font, this.leftPos + 67, this.topPos + 6, 116, 9, Component.translatable("itemGroup.search")) {
+        this.searchBox = new EditBox(this.font,
+                this.leftPos + 67,
+                this.topPos + 6,
+                116,
+                9,
+                Component.translatable("itemGroup.search")
+        ) {
             @Override
             public boolean mouseClicked(double mouseX, double mouseY, int button) {
                 // left click clears text
@@ -102,18 +110,36 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         this.addWidget(this.searchBox);
         this.scrollingList = new ScrollingList(this.leftPos + 29, this.topPos + 17, 162, 18, 4);
         this.addWidget(this.scrollingList);
-        this.enchantButton = this.addRenderableWidget(new SpritelessImageButton(this.leftPos + BUTTONS_OFFSET_X, this.topPos + (this.menu.config.allowRepairing.isActive() ? ENCHANT_BUTTON_OFFSET_Y : ENCHANT_ONLY_BUTTON_OFFSET_Y), 18, 18, 126, 185, INFUSER_LOCATION, button -> {
-            if (this.menu.clickMenuButton(this.minecraft.player, 0)) {
-                this.minecraft.gameMode.handleInventoryButtonClick((this.menu).containerId, 0);
-            }
-            this.searchBox.setValue("");
-        }).setTextureLayout(SpritelessImageButton.LEGACY_TEXTURE_LAYOUT));
-        if (this.menu.config.allowRepairing.isActive()) {
-            this.repairButton = this.addRenderableWidget(new SpritelessImageButton(this.leftPos + BUTTONS_OFFSET_X, this.topPos + REPAIR_BUTTON_OFFSET_Y, 18, 18, 144, 185, INFUSER_LOCATION, button -> {
-                if (this.menu.clickMenuButton(this.minecraft.player, 1)) {
-                    this.minecraft.gameMode.handleInventoryButtonClick((this.menu).containerId, 1);
+        this.enchantButton = this.addRenderableWidget(new SpritelessImageButton(this.leftPos + BUTTONS_OFFSET_X,
+                this.topPos + (this.menu.config.allowRepairing.isActive() ?
+                        ENCHANT_BUTTON_OFFSET_Y :
+                        ENCHANT_ONLY_BUTTON_OFFSET_Y),
+                18,
+                18,
+                126,
+                185,
+                INFUSER_LOCATION,
+                button -> {
+                    if (this.menu.clickMenuButton(this.minecraft.player, 0)) {
+                        this.minecraft.gameMode.handleInventoryButtonClick((this.menu).containerId, 0);
+                    }
+                    this.searchBox.setValue("");
                 }
-            }).setTextureLayout(SpritelessImageButton.LEGACY_TEXTURE_LAYOUT));
+        ).setTextureLayout(SpritelessImageButton.LEGACY_TEXTURE_LAYOUT));
+        if (this.menu.config.allowRepairing.isActive()) {
+            this.repairButton = this.addRenderableWidget(new SpritelessImageButton(this.leftPos + BUTTONS_OFFSET_X,
+                    this.topPos + REPAIR_BUTTON_OFFSET_Y,
+                    18,
+                    18,
+                    144,
+                    185,
+                    INFUSER_LOCATION,
+                    button -> {
+                        if (this.menu.clickMenuButton(this.minecraft.player, 1)) {
+                            this.minecraft.gameMode.handleInventoryButtonClick((this.menu).containerId, 1);
+                        }
+                    }
+            ).setTextureLayout(SpritelessImageButton.LEGACY_TEXTURE_LAYOUT));
         }
         this.updateButtons();
     }
@@ -126,20 +152,20 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
     }
 
     @Override
-    public void resize(Minecraft pMinecraft, int pWidth, int pHeight) {
+    public void resize(Minecraft minecraft, int width, int height) {
         String s = this.searchBox.getValue();
-        super.resize(pMinecraft, pWidth, pHeight);
+        super.resize(minecraft, width, height);
         this.searchBox.setValue(s);
         this.refreshSearchResults();
     }
 
     @Override
-    public boolean charTyped(char pCodePoint, int pModifiers) {
+    public boolean charTyped(char codePoint, int modifiers) {
         if (this.ignoreTextInput) {
             return false;
         }
         String s = this.searchBox.getValue();
-        if (this.searchBox.charTyped(pCodePoint, pModifiers)) {
+        if (this.searchBox.charTyped(codePoint, modifiers)) {
             if (!Objects.equals(s, this.searchBox.getValue())) {
                 this.refreshSearchResults();
             }
@@ -150,52 +176,58 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
     }
 
     @Override
-    public boolean keyPressed(int pKeyCode, int pScanCode, int pModifiers) {
+    public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
         this.ignoreTextInput = false;
         if (!this.searchBox.isFocused()) {
-            if (this.minecraft.options.keyChat.matches(pKeyCode, pScanCode)) {
+            if (this.minecraft.options.keyChat.matches(keyCode, scanCode)) {
                 this.ignoreTextInput = true;
                 this.searchBox.setFocused(true);
                 return true;
             } else {
-                return super.keyPressed(pKeyCode, pScanCode, pModifiers);
+                return super.keyPressed(keyCode, scanCode, modifiers);
             }
         } else {
             boolean flag = this.hoveredSlot != null && this.hoveredSlot.hasItem();
-            boolean flag1 = InputConstants.getKey(pKeyCode, pScanCode).getNumericKeyValue().isPresent();
-            if (flag && flag1 && this.checkHotbarKeyPressed(pKeyCode, pScanCode)) {
+            boolean flag1 = InputConstants.getKey(keyCode, scanCode).getNumericKeyValue().isPresent();
+            if (flag && flag1 && this.checkHotbarKeyPressed(keyCode, scanCode)) {
                 this.ignoreTextInput = true;
                 return true;
             } else {
                 String s = this.searchBox.getValue();
-                if (this.searchBox.keyPressed(pKeyCode, pScanCode, pModifiers)) {
+                if (this.searchBox.keyPressed(keyCode, scanCode, modifiers)) {
                     if (!Objects.equals(s, this.searchBox.getValue())) {
                         this.refreshSearchResults();
                     }
                     return true;
                 } else {
-                    return this.searchBox.isFocused() && this.searchBox.isVisible() && pKeyCode != 256 || super.keyPressed(pKeyCode, pScanCode, pModifiers);
+                    return this.searchBox.isFocused() && this.searchBox.isVisible() && keyCode != 256 ||
+                            super.keyPressed(keyCode, scanCode, modifiers);
                 }
             }
         }
     }
 
     @Override
-    public boolean keyReleased(int pKeyCode, int pScanCode, int pModifiers) {
+    public boolean keyReleased(int keyCode, int scanCode, int modifiers) {
         this.ignoreTextInput = false;
-        return super.keyReleased(pKeyCode, pScanCode, pModifiers);
+        return super.keyReleased(keyCode, scanCode, modifiers);
     }
 
     public void refreshSearchResults() {
         this.scrollingList.clearEntries();
         String s = this.searchBox.getValue().toLowerCase(Locale.ROOT).trim();
         if (s.isEmpty()) {
-            this.menu.getSortedEntries().stream()
+            this.menu.getSortedEntries()
+                    .stream()
                     .map(e -> new EnchantmentListEntry(e.getKey(), e.getValue()))
                     .forEach(this.scrollingList::addEntry);
         } else {
-            this.menu.getSortedEntries().stream()
-                    .filter(e -> Component.translatable(e.getKey().getDescriptionId()).getString().toLowerCase(Locale.ROOT).contains(s))
+            this.menu.getSortedEntries()
+                    .stream()
+                    .filter(e -> Component.translatable(e.getKey().getDescriptionId())
+                            .getString()
+                            .toLowerCase(Locale.ROOT)
+                            .contains(s))
                     // don't show obfuscated entries
                     .filter(e -> this.menu.getMaxLevel(e.getKey()).getSecond() > 0)
                     .map(e -> new EnchantmentListEntry(e.getKey(), e.getValue()))
@@ -206,30 +238,30 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
     }
 
     @Override
-    public boolean mouseClicked(double pMouseX, double pMouseY, int pButton) {
-        if (pButton == 0) {
-            if (this.insideScrollbar(pMouseX, pMouseY)) {
+    public boolean mouseClicked(double mouseX, double mouseY, int button) {
+        if (button == 0) {
+            if (this.insideScrollbar(mouseX, mouseY)) {
                 this.scrolling = this.scrollingList.canScroll();
                 return true;
             }
         }
-        return super.mouseClicked(pMouseX, pMouseY, pButton);
+        return super.mouseClicked(mouseX, mouseY, button);
     }
 
-    protected boolean insideScrollbar(double pMouseX, double pMouseY) {
+    protected boolean insideScrollbar(double mouseX, double mouseY) {
         int fromX = this.leftPos + 197;
         int fromY = this.topPos + 17;
         int toX = fromX + 14;
         int toY = fromY + 72;
-        return pMouseX >= (double)fromX && pMouseY >= (double)fromY && pMouseX < (double)toX && pMouseY < (double)toY;
+        return mouseX >= (double) fromX && mouseY >= (double) fromY && mouseX < (double) toX && mouseY < (double) toY;
     }
 
     @Override
-    public boolean mouseReleased(double pMouseX, double pMouseY, int pButton) {
-        if (pButton == 0) {
+    public boolean mouseReleased(double mouseX, double mouseY, int button) {
+        if (button == 0) {
             this.scrolling = false;
         }
-        return super.mouseReleased(pMouseX, pMouseY, pButton);
+        return super.mouseReleased(mouseX, mouseY, button);
     }
 
     @Override
@@ -237,7 +269,7 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         if (!this.scrollingList.canScroll()) {
             return false;
         } else {
-            this.scrollOffs = (float)((double)this.scrollOffs - scrollY / (this.scrollingList.getItemCount() - 4));
+            this.scrollOffs = (float) ((double) this.scrollOffs - scrollY / (this.scrollingList.getItemCount() - 4));
             this.scrollOffs = Mth.clamp(this.scrollOffs, 0.0F, 1.0F);
             this.scrollingList.scrollTo(this.scrollOffs);
             return true;
@@ -249,7 +281,7 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         if (this.scrolling) {
             int i = this.topPos + 17;
             int j = i + 72;
-            this.scrollOffs = ((float) mouseY - (float)i - 7.5F) / ((float)(j - i) - 15.0F);
+            this.scrollOffs = ((float) mouseY - (float) i - 7.5F) / ((float) (j - i) - 15.0F);
             this.scrollOffs = Mth.clamp(this.scrollOffs, 0.0F, 1.0F);
             this.scrollingList.scrollTo(this.scrollOffs);
             return true;
@@ -282,31 +314,44 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
             this.renderReadableText(guiGraphics, posX + 1, posY + 1, String.valueOf(repairCost), costColor);
         }
         // cannot use hovered check on button as it does not work when the button is not active
-        if (mouseX >= posX && mouseY >= posY && mouseX < posX + 18 && mouseY < posY + 18) {
-            List<FormattedText> list = Lists.newArrayList();
-            if (canRepair) {
-                ItemStack stack = this.menu.getEnchantableStack();
-                MutableComponent nameComponent = Component.empty().append(stack.getHoverName()).withStyle(stack.getRarity().color);
-                if (stack.hasCustomHoverName()) {
-                    nameComponent.withStyle(ChatFormatting.ITALIC);
-                }
-                list.add(nameComponent);
-                Component changeComponent = Component.translatable("gui.enchantinginfuser.tooltip.change", stack.getMaxDamage() - stack.getDamageValue(), stack.getMaxDamage());
-                Component durabilityComponent = Component.translatable("gui.enchantinginfuser.tooltip.durability", changeComponent).withStyle(ChatFormatting.YELLOW);
-                list.add(durabilityComponent);
-                list.add(Component.empty());
-                MutableComponent levelComponent;
-                if (repairCost == 1) {
-                    levelComponent = Component.translatable("container.enchant.level.one");
-                } else {
-                    levelComponent = Component.translatable("container.enchant.level.many", repairCost);
-                }
-                list.add(levelComponent.withStyle(ChatFormatting.GRAY));
-            } else {
-                list.add(Component.translatable("container.enchant.level.requirement", repairCost).withStyle(ChatFormatting.RED));
-            }
-            this.setTooltipForNextRenderPass(Language.getInstance().getVisualOrder(list));
+        if (ScreenHelper.isHovering(posX, posY, 18, 18, mouseX, mouseY)) {
+            this.setTooltipForNextRenderPass(Language.getInstance().getVisualOrder(this.getRepairButtonLines()));
         }
+    }
+
+    private List<FormattedText> getRepairButtonLines() {
+        int repairCost = this.menu.getRepairCost();
+        List<FormattedText> lines = Lists.newArrayList();
+        if (this.menu.canRepair(this.minecraft.player)) {
+            ItemStack itemStack = this.menu.getEnchantableStack();
+            MutableComponent nameComponent = Component.empty()
+                    .append(itemStack.getHoverName())
+                    .withStyle(itemStack.getRarity().color());
+            if (itemStack.has(DataComponents.CUSTOM_NAME)) {
+                nameComponent.withStyle(ChatFormatting.ITALIC);
+            }
+            lines.add(nameComponent);
+            Component changeComponent = Component.translatable("gui.enchantinginfuser.tooltip.change",
+                    itemStack.getMaxDamage() - itemStack.getDamageValue(),
+                    itemStack.getMaxDamage()
+            );
+            Component durabilityComponent = Component.translatable("gui.enchantinginfuser.tooltip.durability",
+                    changeComponent
+            ).withStyle(ChatFormatting.YELLOW);
+            lines.add(durabilityComponent);
+            lines.add(Component.empty());
+            MutableComponent levelComponent;
+            if (repairCost == 1) {
+                levelComponent = Component.translatable("container.enchant.level.one");
+            } else {
+                levelComponent = Component.translatable("container.enchant.level.many", repairCost);
+            }
+            lines.add(levelComponent.withStyle(ChatFormatting.GRAY));
+        } else {
+            lines.add(Component.translatable("container.enchant.level.requirement", repairCost)
+                    .withStyle(ChatFormatting.RED));
+        }
+        return lines;
     }
 
     private void renderEnchantButtonCost(GuiGraphics guiGraphics, int mouseX, int mouseY) {
@@ -316,46 +361,61 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         final int posX = this.enchantButton.getX();
         final int posY = this.enchantButton.getY();
         if (enchantCost != 0) {
-            final int costColor = enchantCost < 0 ? ChatFormatting.YELLOW.getColor() : (canEnchant ? ChatFormatting.GREEN.getColor() : ChatFormatting.RED.getColor());
-            this.renderReadableText(guiGraphics, posX + 1, posY + 1, enchantCost < 0 ? "+" : String.valueOf(enchantCost), costColor);
+            final int costColor = enchantCost < 0 ?
+                    ChatFormatting.YELLOW.getColor() :
+                    (canEnchant ? ChatFormatting.GREEN.getColor() : ChatFormatting.RED.getColor());
+            this.renderReadableText(guiGraphics,
+                    posX + 1,
+                    posY + 1,
+                    enchantCost < 0 ? "+" : String.valueOf(enchantCost),
+                    costColor
+            );
         }
         // cannot use hovered check on button as it does not work when the button is not active
-        if (mouseX >= posX && mouseY >= posY && mouseX < posX + 18 && mouseY < posY + 18) {
-            List<FormattedText> list = Lists.newArrayList();
-            if (canEnchant) {
-                Map<Enchantment, Integer> enchantments = this.menu.getValidEnchantments();
-                boolean enchanted = enchantments.values().stream().anyMatch(level -> level > 0);
-                ItemStack stack = this.menu.getEnchantableStack();
-                ItemStack displayStack = EnchantmentUtil.getNewEnchantmentStack(stack, enchanted, false);
-                MutableComponent nameComponent = Component.empty().append(displayStack.getHoverName()).withStyle(this.getItemNameRarity(displayStack, enchanted).color);
-                if (stack.hasCustomHoverName()) {
-                    nameComponent.withStyle(ChatFormatting.ITALIC);
-                }
-                list.add(nameComponent);
-                this.addEnchantments(stack, enchantments, list);
-                if (enchantCost != 0) {
-                    list.add(Component.empty());
-                    MutableComponent levelComponent;
-                    if (enchantCost < 0) {
-                        levelComponent = Component.translatable("gui.enchantinginfuser.tooltip.points");
-                    } else if (enchantCost == 1) {
-                        levelComponent = Component.translatable("container.enchant.level.one");
-                    } else {
-                        levelComponent = Component.translatable("container.enchant.level.many", enchantCost);
-                    }
-                    list.add(levelComponent.withStyle(ChatFormatting.GRAY));
-                }
-            } else {
-                list.add(Component.translatable("container.enchant.level.requirement", enchantCost).withStyle(ChatFormatting.RED));
-            }
-            this.setTooltipForNextRenderPass(Language.getInstance().getVisualOrder(list));
+        if (ScreenHelper.isHovering(posX, posY, 18, 18, mouseX, mouseY)) {
+            this.setTooltipForNextRenderPass(Language.getInstance().getVisualOrder(this.getEnchantButtonLines()));
         }
     }
 
-    private Rarity getItemNameRarity(ItemStack stack, boolean enchanted) {
+    private @NotNull List<FormattedText> getEnchantButtonLines() {
+        int enchantCost = this.menu.getEnchantCost();
+        List<FormattedText> lines = Lists.newArrayList();
+        if (this.menu.canEnchant(this.minecraft.player)) {
+            ItemEnchantments enchantments = this.menu.getSelectedEnchantments();
+            boolean enchanted = !enchantments.isEmpty();
+            ItemStack itemStack = this.menu.getEnchantableStack();
+            ItemStack displayStack = ModEnchantmentHelper.getEnchantedItemStack(itemStack, enchanted);
+            MutableComponent nameComponent = Component.empty()
+                    .append(displayStack.getHoverName())
+                    .withStyle(this.getItemNameRarity(displayStack, enchanted).color());
+            if (itemStack.has(DataComponents.CUSTOM_NAME)) {
+                nameComponent.withStyle(ChatFormatting.ITALIC);
+            }
+            lines.add(nameComponent);
+            this.addEnchantments(itemStack, enchantments, lines);
+            if (enchantCost != 0) {
+                lines.add(Component.empty());
+                MutableComponent levelComponent;
+                if (enchantCost < 0) {
+                    levelComponent = Component.translatable("gui.enchantinginfuser.tooltip.points");
+                } else if (enchantCost == 1) {
+                    levelComponent = Component.translatable("container.enchant.level.one");
+                } else {
+                    levelComponent = Component.translatable("container.enchant.level.many", enchantCost);
+                }
+                lines.add(levelComponent.withStyle(ChatFormatting.GRAY));
+            }
+        } else {
+            lines.add(Component.translatable("container.enchant.level.requirement", enchantCost)
+                    .withStyle(ChatFormatting.RED));
+        }
+        return lines;
+    }
+
+    private Rarity getItemNameRarity(ItemStack itemStack, boolean enchanted) {
         // we want the pure stack, as the one we get might already be enchanted
-        final Rarity rarity = stack.getItem().getRarity(new ItemStack(stack.getItem()));
-        if (!enchanted || stack.getItem() instanceof EnchantedBookItem) {
+        Rarity rarity = itemStack.getRarity().getRarity(new ItemStack(itemStack.getItem()));
+        if (!enchanted || itemStack.getItem() instanceof EnchantedBookItem) {
             return rarity;
         }
         if (rarity == Rarity.RARE || rarity == Rarity.EPIC) {
@@ -364,39 +424,44 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         return Rarity.RARE;
     }
 
-    private void addEnchantments(ItemStack stack, Map<Enchantment, Integer> enchantments, List<FormattedText> list) {
-        Map<Enchantment, Integer> oldEnchantments = EnchantmentHelper.getEnchantments(stack);
+    private void addEnchantments(ItemStack itemStack, ItemEnchantments enchantments, List<FormattedText> lines) {
+        ItemEnchantments oldEnchantments = EnchantmentHelper.getEnchantmentsForCrafting(itemStack);
         List<FormattedText> newList = Lists.newArrayList();
         List<FormattedText> changedList = Lists.newArrayList();
         List<FormattedText> oldList = Lists.newArrayList();
         List<FormattedText> removedList = Lists.newArrayList();
 
-        Set<Enchantment> allEnchantments = Sets.newHashSet(enchantments.keySet());
+        Set<Holder<Enchantment>> allEnchantments = Sets.newHashSet(enchantments.keySet());
         allEnchantments.addAll(oldEnchantments.keySet());
-        for (Enchantment enchantment : allEnchantments) {
+        for (Holder<Enchantment> enchantment : allEnchantments) {
             int oldLevel = oldEnchantments.getOrDefault(enchantment, -1);
             int newLevel = enchantments.getOrDefault(enchantment, -1);
             if (newLevel > 0 && oldLevel <= 0) {
-                MutableComponent component = EnchantmentUtil.getPlainEnchantmentName(enchantment, newLevel);
+                MutableComponent component = EnchantmentTooltipHelper.getDisplayNameWithLevel(enchantment, newLevel);
                 newList.add(component.withStyle(ChatFormatting.GREEN));
             } else if (newLevel == 0 && oldLevel > 0) {
-                MutableComponent component = EnchantmentUtil.getPlainEnchantmentName(enchantment, oldLevel);
+                MutableComponent component = EnchantmentTooltipHelper.getDisplayNameWithLevel(enchantment, oldLevel);
                 removedList.add(component.withStyle(ChatFormatting.RED));
             } else if (newLevel > 0 && oldLevel > 0 && newLevel != oldLevel) {
                 // -1 prevents level from being added, so we can do it ourselves
-                MutableComponent component = EnchantmentUtil.getPlainEnchantmentName(enchantment, -1);
-                MutableComponent changeComponent = Component.translatable("gui.enchantinginfuser.tooltip.change", Component.translatable("enchantment.level." + oldLevel), Component.translatable("enchantment.level." + newLevel));
+                MutableComponent component = EnchantmentTooltipHelper.getDisplayName(enchantment);
+                MutableComponent changeComponent = Component.translatable("gui.enchantinginfuser.tooltip.change",
+                        Component.translatable("enchantment.level." + oldLevel),
+                        Component.translatable("enchantment.level." + newLevel)
+                );
                 changedList.add(component.append(" ").append(changeComponent).withStyle(ChatFormatting.YELLOW));
             } else if (newLevel > 0 || oldLevel > 0) {
-                MutableComponent component = EnchantmentUtil.getPlainEnchantmentName(enchantment, newLevel > 0 ? newLevel : oldLevel);
+                MutableComponent component = EnchantmentTooltipHelper.getDisplayNameWithLevel(enchantment,
+                        newLevel > 0 ? newLevel : oldLevel
+                );
                 oldList.add(component.withStyle(ChatFormatting.GRAY));
             }
         }
 
-        list.addAll(newList);
-        list.addAll(changedList);
-        list.addAll(oldList);
-        list.addAll(removedList);
+        lines.addAll(newList);
+        lines.addAll(changedList);
+        lines.addAll(oldList);
+        lines.addAll(removedList);
     }
 
     private void renderReadableText(GuiGraphics guiGraphics, int posX, int posY, String text, int color) {
@@ -427,13 +492,21 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         } else {
             textColor = ChatFormatting.WHITE.getColor();
         }
-        guiGraphics.drawString(this.font, String.valueOf(power), posX + 19 - 2 - this.font.width(String.valueOf(power)), posY + 6 + 3, textColor);
+        guiGraphics.drawString(this.font,
+                String.valueOf(power),
+                posX + 19 - 2 - this.font.width(String.valueOf(power)),
+                posY + 6 + 3,
+                textColor
+        );
         guiGraphics.pose().popPose();
         if (mouseX >= posX && mouseY >= posY && mouseX < posX + 16 && mouseY < posY + 16) {
             final ArrayList<FormattedCharSequence> list = Lists.newArrayList();
-            list.add(Component.translatable(CURRENT_ENCHANTING_POWER_TRANSLATION_KEY, ENCHANTING_POWER_COMPONENT, power, maxPower).withStyle(ChatFormatting.YELLOW).getVisualOrderText());
+            list.add(Component.translatable(EnchantmentTooltipHelper.KEY_CURRENT_ENCHANTING_POWER, power, maxPower)
+                    .withStyle(ChatFormatting.YELLOW)
+                    .getVisualOrderText());
             if (power < maxPower) {
-                list.addAll(InfuserScreen.this.font.split(Component.translatable("gui.enchantinginfuser.tooltip.enchanting_power.hint").withStyle(ChatFormatting.GRAY), 175));
+                list.addAll(InfuserScreen.this.font.split(Component.translatable(
+                        "gui.enchantinginfuser.tooltip.enchanting_power.hint").withStyle(ChatFormatting.GRAY), 175));
             }
             this.setTooltipForNextRenderPass(list);
         }
@@ -442,17 +515,29 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
     @Override
     protected void renderBg(GuiGraphics guiGraphics, float partialTick, int mouseX, int mouseY) {
         RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
-        int i = (this.width - this.imageWidth) / 2;
-        int j = (this.height - this.imageHeight) / 2;
-        guiGraphics.blit(INFUSER_LOCATION, i, j, 0, 0, this.imageWidth, this.imageHeight);
+        guiGraphics.blit(INFUSER_LOCATION, this.leftPos, this.topPos, 0, 0, this.imageWidth, this.imageHeight);
         this.searchBox.render(guiGraphics, mouseX, mouseY, partialTick);
         RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
         int sliderX = this.leftPos + 197 - 2;
         int sliderY = this.topPos + 17 - 2;
         int sliderRange = sliderY + 72 + 2 + 2;
-        guiGraphics.blit(INFUSER_LOCATION, sliderX, sliderY + (int)((float)(sliderRange - sliderY - 18) * this.scrollOffs), 220, 54 + (this.scrollingList.canScroll() ? 18 : 0), 18, 18);
+        guiGraphics.blit(INFUSER_LOCATION,
+                sliderX,
+                sliderY + (int) ((float) (sliderRange - sliderY - 18) * this.scrollOffs),
+                220,
+                54 + (this.scrollingList.canScroll() ? 18 : 0),
+                18,
+                18
+        );
         // render slot manually as it is placed further down when repairing is disabled
-        guiGraphics.blit(INFUSER_LOCATION, this.leftPos + 8 - 1, this.topPos + (this.menu.config.allowRepairing.isActive() ? 23 : 34) - 1, 162, 185, 18, 18);
+        guiGraphics.blit(INFUSER_LOCATION,
+                this.leftPos + 8 - 1,
+                this.topPos + (this.menu.config.allowRepairing.isActive() ? 23 : 34) - 1,
+                162,
+                185,
+                18,
+                18
+        );
     }
 
     private class ScrollingList extends AbstractContainerEventHandler implements Renderable, NarratableEntry {
@@ -492,7 +577,7 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
 
         protected void addEntry(EnchantmentListEntry pEntry) {
             this.children.add(pEntry);
-            pEntry.setList(this);
+            pEntry.setParentList(this);
             this.markOthersIncompatible();
         }
 
@@ -524,7 +609,8 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
 
         @Override
         public boolean isMouseOver(double mouseX, double mouseY) {
-            return mouseX >= this.posX && mouseX < this.posX + this.itemWidth && mouseY >= this.posY && mouseY < this.posY + this.itemHeight * this.length;
+            return mouseX >= this.posX && mouseX < this.posX + this.itemWidth && mouseY >= this.posY &&
+                    mouseY < this.posY + this.itemHeight * this.length;
         }
 
         @Override
@@ -560,53 +646,63 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         @Override
         public void render(GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTick) {
             for (int i = 0; i < Math.min(this.length, this.getItemCount()); i++) {
-                this.children.get(this.scrollPosition + i).render(guiGraphics, this.posX, this.posY + this.itemHeight * i, this.itemWidth, this.itemHeight, mouseX, mouseY, partialTick);
+                this.children.get(this.scrollPosition + i)
+                        .render(guiGraphics,
+                                this.posX,
+                                this.posY + this.itemHeight * i,
+                                this.itemWidth,
+                                this.itemHeight,
+                                mouseX,
+                                mouseY,
+                                partialTick
+                        );
             }
         }
 
         @Override
         public NarrationPriority narrationPriority() {
-            // TODO proper implementation
             return NarratableEntry.NarrationPriority.NONE;
         }
 
         @Override
         public void updateNarration(NarrationElementOutput pNarrationElementOutput) {
-            // TODO proper implementation
+            // NO-OP
         }
     }
 
     private class EnchantmentListEntry implements ContainerEventHandler {
-        private static final Component UNKNOWN_ENCHANT_COMPONENT = Component.translatable("gui.enchantinginfuser.tooltip.unknown_enchantment").withStyle(ChatFormatting.GRAY);
-        private static final Component INCREASE_LEVEL_COMPONENT = Component.translatable("gui.enchantinginfuser.tooltip.lowPower1").withStyle(ChatFormatting.GRAY);
-        private static final Component MODIFY_LEVEL_COMPONENT = Component.translatable("gui.enchantinginfuser.tooltip.lowPower2").withStyle(ChatFormatting.GRAY);
-
-        private final Enchantment enchantment;
+        private final Holder<Enchantment> enchantment;
         private final int maxLevel;
         private final int requiredPower;
-        private final Button decrButton;
-        private final Button incrButton;
-        private int level;
-        private ScrollingList list;
+        private final Button removeButton;
+        private final Button addButton;
+        private int enchantmentLevel;
+        private ScrollingList parentList;
         @Nullable
         private GuiEventListener focused;
         private boolean dragging;
-        private Set<Enchantment> incompatible = Sets.newHashSet();
+        private Collection<Holder<Enchantment>> incompatibleEnchantments = Collections.emptySet();
 
-        public EnchantmentListEntry(Enchantment enchantment, int level) {
+        public EnchantmentListEntry(Holder<Enchantment> enchantment, int enchantmentLevel) {
             this.enchantment = enchantment;
             final Pair<OptionalInt, Integer> maxLevelResult = InfuserScreen.this.menu.getMaxLevel(enchantment);
             this.maxLevel = maxLevelResult.getSecond();
             this.requiredPower = maxLevelResult.getFirst().orElse(-1);
-            this.level = level;
-            this.decrButton = new SpritelessImageButton(0, 0, 18, 18, 220, 0, INFUSER_LOCATION, button -> {
+            this.enchantmentLevel = enchantmentLevel;
+            this.removeButton = new SpritelessImageButton(0, 0, 18, 18, 220, 0, INFUSER_LOCATION, button -> {
                 do {
-                    final int newLevel = InfuserScreen.this.menu.clickEnchantmentLevelButton(InfuserScreen.this.minecraft.player, this.enchantment, false);
-                    if (newLevel == -1) return;
-                    this.level = newLevel;
-                    EnchantingInfuser.NETWORK.sendToServer(new C2SAddEnchantLevelMessage(InfuserScreen.this.menu.containerId, this.enchantment, false));
-                    this.updateButtons();
-                    this.list.markOthersIncompatible();
+                    int newLevel = InfuserScreen.this.menu.clickEnchantmentLevelButton(this.enchantment,
+                            ServerboundEnchantmentLevelMessage.Operation.REMOVE
+                    );
+                    if (newLevel != -1) {
+                        this.enchantmentLevel = newLevel;
+                        EnchantingInfuser.NETWORK.sendToServer(new ServerboundEnchantmentLevelMessage(InfuserScreen.this.menu.containerId,
+                                this.enchantment,
+                                ServerboundEnchantmentLevelMessage.Operation.REMOVE
+                        ));
+                        this.updateButtons();
+                        this.parentList.markOthersIncompatible();
+                    }
                 } while (button.active && button.visible && Screen.hasShiftDown());
             }) {
 
@@ -616,32 +712,56 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
                         RenderSystem.enableDepthTest();
                         RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, this.alpha);
                         int index = !this.active ? 0 : this.isHoveredOrFocused() ? 2 : 1;
-                        guiGraphics.blit(this.resourceLocation, this.getX() + 2, this.getY(), this.xTexStart, this.yTexStart + index * this.yDiffTex, this.width, this.height, this.textureWidth, this.textureHeight);
-                        guiGraphics.blit(this.resourceLocation, this.getX() - 4, this.getY(), this.xTexStart, this.yTexStart + index * this.yDiffTex, this.width, this.height, this.textureWidth, this.textureHeight);
-                        this.renderTooltip();
+                        guiGraphics.blit(this.resourceLocation,
+                                this.getX() + 2,
+                                this.getY(),
+                                this.xTexStart,
+                                this.yTexStart + index * this.yDiffTex,
+                                this.width,
+                                this.height,
+                                this.textureWidth,
+                                this.textureHeight
+                        );
+                        guiGraphics.blit(this.resourceLocation,
+                                this.getX() - 4,
+                                this.getY(),
+                                this.xTexStart,
+                                this.yTexStart + index * this.yDiffTex,
+                                this.width,
+                                this.height,
+                                this.textureWidth,
+                                this.textureHeight
+                        );
+                        this.refreshTooltip();
                     } else {
                         super.renderWidget(guiGraphics, mouseX, mouseY, partialTicks);
-                        this.renderTooltip();
+                        this.refreshTooltip();
                     }
                 }
 
-                private void renderTooltip() {
+                private void refreshTooltip() {
                     if (this.isHoveredOrFocused()) {
-                        if (EnchantmentListEntry.this.level - 1 >= EnchantmentListEntry.this.maxLevel && !EnchantmentListEntry.this.isObfuscated()) {
-                            InfuserScreen.this.setTooltipForNextRenderPass(EnchantmentListEntry.this.getLowPowerComponent(MODIFY_LEVEL_COMPONENT));
-                            InfuserScreen.this.insufficientPower = true;
+                        if (EnchantmentListEntry.this.enchantmentLevel - 1 >= EnchantmentListEntry.this.maxLevel &&
+                                !EnchantmentListEntry.this.isObfuscated()) {
+                            EnchantmentListEntry.this.setWeakPowerTooltip(EnchantmentTooltipHelper.MODIFY_LEVEL_COMPONENT);
                         }
                     }
                 }
             }.setTextureLayout(SpritelessImageButton.LEGACY_TEXTURE_LAYOUT);
-            this.incrButton = new SpritelessImageButton(0, 0, 18, 18, 238, 0, INFUSER_LOCATION, button -> {
+            this.addButton = new SpritelessImageButton(0, 0, 18, 18, 238, 0, INFUSER_LOCATION, button -> {
                 do {
-                    final int newLevel = InfuserScreen.this.menu.clickEnchantmentLevelButton(InfuserScreen.this.minecraft.player, this.enchantment, true);
-                    if (newLevel == -1) return;
-                    this.level = newLevel;
-                    EnchantingInfuser.NETWORK.sendToServer(new C2SAddEnchantLevelMessage(InfuserScreen.this.menu.containerId, this.enchantment, true));
-                    this.updateButtons();
-                    this.list.markOthersIncompatible();
+                    int newLevel = InfuserScreen.this.menu.clickEnchantmentLevelButton(this.enchantment,
+                            ServerboundEnchantmentLevelMessage.Operation.ADD
+                    );
+                    if (newLevel != -1) {
+                        this.enchantmentLevel = newLevel;
+                        EnchantingInfuser.NETWORK.sendToServer(new ServerboundEnchantmentLevelMessage(InfuserScreen.this.menu.containerId,
+                                this.enchantment,
+                                ServerboundEnchantmentLevelMessage.Operation.ADD
+                        ));
+                        this.updateButtons();
+                        this.parentList.markOthersIncompatible();
+                    }
                 } while (button.active && button.visible && Screen.hasShiftDown());
             }) {
 
@@ -651,20 +771,38 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
                         RenderSystem.enableDepthTest();
                         RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, this.alpha);
                         int index = !this.active ? 0 : this.isHoveredOrFocused() ? 2 : 1;
-                        guiGraphics.blit(this.resourceLocation, this.getX() - 2, this.getY(), this.xTexStart, this.yTexStart + index * this.yDiffTex, this.width, this.height, this.textureWidth, this.textureHeight);
-                        guiGraphics.blit(this.resourceLocation, this.getX() + 4, this.getY(), this.xTexStart, this.yTexStart + index * this.yDiffTex, this.width, this.height, this.textureWidth, this.textureHeight);
-                        this.renderTooltip();
+                        guiGraphics.blit(this.resourceLocation,
+                                this.getX() - 2,
+                                this.getY(),
+                                this.xTexStart,
+                                this.yTexStart + index * this.yDiffTex,
+                                this.width,
+                                this.height,
+                                this.textureWidth,
+                                this.textureHeight
+                        );
+                        guiGraphics.blit(this.resourceLocation,
+                                this.getX() + 4,
+                                this.getY(),
+                                this.xTexStart,
+                                this.yTexStart + index * this.yDiffTex,
+                                this.width,
+                                this.height,
+                                this.textureWidth,
+                                this.textureHeight
+                        );
+                        this.refreshTooltip();
                     } else {
                         super.renderWidget(guiGraphics, mouseX, mouseY, partialTicks);
-                        this.renderTooltip();
+                        this.refreshTooltip();
                     }
                 }
 
-                private void renderTooltip() {
+                private void refreshTooltip() {
                     if (this.isHoveredOrFocused()) {
-                        if (EnchantmentListEntry.this.level >= EnchantmentListEntry.this.maxLevel && !EnchantmentListEntry.this.isObfuscated()) {
-                            InfuserScreen.this.setTooltipForNextRenderPass(EnchantmentListEntry.this.getLowPowerComponent(INCREASE_LEVEL_COMPONENT));
-                            InfuserScreen.this.insufficientPower = true;
+                        if (EnchantmentListEntry.this.enchantmentLevel >= EnchantmentListEntry.this.maxLevel &&
+                                !EnchantmentListEntry.this.isObfuscated()) {
+                            EnchantmentListEntry.this.setWeakPowerTooltip(EnchantmentTooltipHelper.INCREASE_LEVEL_COMPONENT);
                         }
                     }
                 }
@@ -672,43 +810,44 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
             this.updateButtons();
         }
 
-        private List<FormattedCharSequence> getLowPowerComponent(Component component) {
-            List<FormattedCharSequence> list = Lists.newArrayList();
-            Component currentPower = Component.literal(String.valueOf(InfuserScreen.this.menu.getCurrentPower())).withStyle(ChatFormatting.RED);
-            Component requiredPower = Component.literal(String.valueOf(this.requiredPower));
-            list.add(Component.translatable(CURRENT_ENCHANTING_POWER_TRANSLATION_KEY, ENCHANTING_POWER_COMPONENT, currentPower, requiredPower).getVisualOrderText());
-            list.addAll(InfuserScreen.this.font.split(component, 175));
-            return list;
+        private void setWeakPowerTooltip(Component component) {
+            List<FormattedCharSequence> lines = EnchantmentTooltipHelper.getWeakPowerTooltip(InfuserScreen.this.menu.getCurrentPower(),
+                    this.requiredPower,
+                    component
+            );
+            InfuserScreen.this.setTooltipForNextRenderPass(lines);
+            InfuserScreen.this.insufficientPower = true;
         }
 
-        public void setList(ScrollingList list) {
-            this.list = list;
+        public void setParentList(ScrollingList parentList) {
+            this.parentList = parentList;
         }
 
         public void markIncompatible(Collection<EnchantmentListEntry> incompatibleList) {
-            this.incompatible = incompatibleList.stream()
+            this.incompatibleEnchantments = incompatibleList.stream()
                     .map(e -> e.enchantment)
                     .collect(Collectors.toSet());
             final boolean compatible = incompatibleList.isEmpty();
-            if (!compatible) this.level = 0;
+            if (!compatible) this.enchantmentLevel = 0;
             this.updateButtons();
-            this.decrButton.active = compatible;
-            this.incrButton.active &= compatible;
+            this.removeButton.active = compatible;
+            this.addButton.active &= compatible;
         }
 
         private void updateButtons() {
-            this.decrButton.visible = this.level > 0;
-            this.incrButton.visible = this.level < EnchantingInfuserApi.getEnchantStatsProvider().getMaxLevel(this.enchantment);
-            this.decrButton.active = this.level - 1 < this.maxLevel;
-            this.incrButton.active = this.level < this.maxLevel;
+            this.removeButton.visible = this.enchantmentLevel > 0;
+            this.addButton.visible = this.enchantmentLevel <
+                    EnchantingInfuserApi.getEnchantStatsProvider().getMaxLevel(this.enchantment);
+            this.removeButton.active = this.enchantmentLevel - 1 < this.maxLevel;
+            this.addButton.active = this.enchantmentLevel < this.maxLevel;
         }
 
         public boolean isActive() {
-            return this.level > 0;
+            return this.enchantmentLevel > 0;
         }
 
         public boolean isIncompatible() {
-            return !this.incompatible.isEmpty();
+            return !this.incompatibleEnchantments.isEmpty();
         }
 
         public boolean isObfuscated() {
@@ -721,7 +860,8 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
 
         public boolean isIncompatibleWith(EnchantmentListEntry other) {
             if (other == this) return false;
-            return (this.isActive() || other.isActive()) && !EnchantingInfuserApi.getEnchantStatsProvider().isCompatibleWith(this.enchantment, other.enchantment);
+            return (this.isActive() || other.isActive()) && !EnchantingInfuserApi.getEnchantStatsProvider()
+                    .isCompatibleWith(this.enchantment, other.enchantment);
         }
 
         public void render(GuiGraphics guiGraphics, int leftPos, int topPos, int width, int height, int mouseX, int mouseY, float partialTicks) {
@@ -730,73 +870,68 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
             RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
             guiGraphics.blit(INFUSER_LOCATION, leftPos + 18, topPos, 0, 185 + this.getYImage() * 18, 126, 18);
             FormattedCharSequence formattedCharSequence = this.getRenderingName(this.enchantment, width);
-            guiGraphics.drawCenteredString(InfuserScreen.this.font, formattedCharSequence, leftPos + width / 2, topPos + 5, this.isIncompatible() || this.isObfuscated() ? 6839882 : -1);
+            guiGraphics.drawCenteredString(InfuserScreen.this.font,
+                    formattedCharSequence,
+                    leftPos + width / 2,
+                    topPos + 5,
+                    this.isIncompatible() || this.isObfuscated() ? 6839882 : -1
+            );
+            this.refreshTooltip(leftPos, topPos, mouseX, mouseY);
+            this.removeButton.setX(leftPos);
+            this.removeButton.setY(topPos);
+            this.removeButton.render(guiGraphics, mouseX, mouseY, partialTicks);
+            this.addButton.setX(leftPos + width - 18);
+            this.addButton.setY(topPos);
+            this.addButton.render(guiGraphics, mouseX, mouseY, partialTicks);
+        }
+
+        private void refreshTooltip(int leftPos, int topPos, int mouseX, int mouseY) {
             if (mouseX >= leftPos + 18 && mouseX < leftPos + 18 + 126 && mouseY >= topPos && mouseY < topPos + 18) {
-                this.handleTooltip(this.enchantment);
-            }
-            this.decrButton.setX(leftPos);
-            this.decrButton.setY(topPos);
-            this.decrButton.render(guiGraphics, mouseX, mouseY, partialTicks);
-            this.incrButton.setX(leftPos + width - 18);
-            this.incrButton.setY(topPos);
-            this.incrButton.render(guiGraphics, mouseX, mouseY, partialTicks);
-        }
-
-        private FormattedCharSequence getRenderingName(Enchantment enchantment, int maxWidth) {
-            FormattedCharSequence formattedCharSequence = null;
-            if (this.isObfuscated()) {
-                EnchantmentNames.getInstance().initSeed(InfuserScreen.this.enchantmentSeed + BuiltInRegistries.ENCHANTMENT.getId(enchantment));
-                FormattedText formattedtext = EnchantmentNames.getInstance().getRandomName(InfuserScreen.this.font, (int) (maxWidth * 0.72F));
-                final List<FormattedCharSequence> list = InfuserScreen.this.font.split(formattedtext, (int) (maxWidth * 0.72F));
-                if (!list.isEmpty()) {
-                    formattedCharSequence = list.get(0);
+                if (this.isObfuscated()) {
+                    this.setWeakPowerTooltip(EnchantmentTooltipHelper.UNKNOWN_ENCHANT_COMPONENT);
+                } else if (this.isIncompatible()) {
+                    InfuserScreen.this.setTooltipForNextRenderPass(EnchantmentTooltipHelper.getIncompatibleEnchantmentsTooltip(
+                            this.incompatibleEnchantments));
+                } else {
+                    InfuserScreen.this.setTooltipForNextRenderPass(EnchantmentTooltipHelper.getEnchantmentTooltip(this.enchantment));
                 }
             }
-            if (formattedCharSequence == null) {
-                final MutableComponent component = Component.translatable(enchantment.getDescriptionId());
-                if (this.isActive()) {
-                    component.append(" ").append(Component.translatable("enchantment.level." + this.level));
-                }
-                formattedCharSequence = component.getVisualOrderText();
-            }
-            return formattedCharSequence;
         }
 
-        private void handleTooltip(Enchantment enchantment) {
+        private FormattedCharSequence getRenderingName(Holder<Enchantment> enchantment, int maxWidth) {
             if (this.isObfuscated()) {
-                InfuserScreen.this.setTooltipForNextRenderPass(this.getLowPowerComponent(UNKNOWN_ENCHANT_COMPONENT));
-                InfuserScreen.this.insufficientPower = true;
-            } else if (this.isIncompatible()) {
-                final Component incompatibleComponent = Component.translatable("gui.enchantinginfuser.tooltip.incompatible", this.incompatible.stream()
-                        .map(e -> Component.translatable(e.getDescriptionId()))
-                        .reduce((o1, o2) -> o1.append(", ").append(o2))
-                        .orElse(Component.empty()).withStyle(ChatFormatting.GRAY));
-                InfuserScreen.this.setTooltipForNextRenderPass(InfuserScreen.this.font.split(incompatibleComponent, 175));
+                int holderId = InfuserScreen.this.minecraft.getConnection()
+                        .registryAccess()
+                        .registryOrThrow(Registries.ENCHANTMENT)
+                        .getIdOrThrow(enchantment.value());
+                EnchantmentNames.getInstance()
+                        .initSeed(
+                                InfuserScreen.this.enchantmentSeed + holderId);
+                FormattedText formattedtext = EnchantmentNames.getInstance()
+                        .getRandomName(InfuserScreen.this.font, (int) (maxWidth * 0.72F));
+                List<FormattedCharSequence> lines = InfuserScreen.this.font.split(formattedtext,
+                        (int) (maxWidth * 0.72F)
+                );
+                if (!lines.isEmpty()) {
+                    return lines.getFirst();
+                }
+            }
+            if (this.isActive()) {
+                return EnchantmentTooltipHelper.getDisplayNameWithLevel(enchantment, this.enchantmentLevel)
+                        .getVisualOrderText();
             } else {
-                List<FormattedCharSequence> list = Lists.newArrayList();
-                if (Language.getInstance().has(enchantment.getDescriptionId() + ".desc")) {
-                    list.addAll(InfuserScreen.this.font.split(Component.translatable(enchantment.getDescriptionId() + ".desc").withStyle(ChatFormatting.GRAY), 175));
-                } else if (Language.getInstance().has(enchantment.getDescriptionId() + ".description")) {
-                    list.addAll(InfuserScreen.this.font.split(Component.translatable(enchantment.getDescriptionId() + ".description").withStyle(ChatFormatting.GRAY), 175));
-                }
-                final MutableComponent levelsComponent = Component.translatable("enchantment.level." + EnchantingInfuserApi.getEnchantStatsProvider().getMinLevel(enchantment));
-                if (EnchantingInfuserApi.getEnchantStatsProvider().getMinLevel(enchantment) != EnchantingInfuserApi.getEnchantStatsProvider().getMaxLevel(enchantment)) {
-                    levelsComponent.append("-").append( Component.translatable("enchantment.level." + EnchantingInfuserApi.getEnchantStatsProvider().getMaxLevel(enchantment)));
-                }
-                final Component wrappedComponent = Component.literal("(").append(levelsComponent).append(")").withStyle(ChatFormatting.GRAY);
-                list.add(0, Component.translatable(enchantment.getDescriptionId()).append(" ").append(wrappedComponent).getVisualOrderText());
-                InfuserScreen.this.setTooltipForNextRenderPass(list);
+                return EnchantmentTooltipHelper.getDisplayName(enchantment).getVisualOrderText();
             }
         }
 
         @Override
-        public boolean isMouseOver(double pMouseX, double pMouseY) {
-            return Objects.equals(this.list.getEntryAtPosition(pMouseX, pMouseY), this);
+        public boolean isMouseOver(double mouseX, double mouseY) {
+            return Objects.equals(this.parentList.getEntryAtPosition(mouseX, mouseY), this);
         }
 
         @Override
         public List<? extends GuiEventListener> children() {
-            return ImmutableList.of(this.decrButton, this.incrButton);
+            return List.of(this.removeButton, this.addButton);
         }
 
         @Override
@@ -805,13 +940,13 @@ public class InfuserScreen extends AbstractContainerScreen<InfuserMenu> {
         }
 
         @Override
-        public void setDragging(boolean pDragging) {
-            this.dragging = pDragging;
+        public void setDragging(boolean isDragging) {
+            this.dragging = isDragging;
         }
 
         @Override
-        public void setFocused(@Nullable GuiEventListener pListener) {
-            this.focused = pListener;
+        public void setFocused(@Nullable GuiEventListener focused) {
+            this.focused = focused;
         }
 
         @Override
